# DownloadSharedLibrary

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/downloadsharedlibrary/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  crypto.cpp
app/src/main/java/com/example/downloadsharedlibrary/: MainActivity.java  cryptoJNI.java
app/src/main/res/layout/: content_main.xml
app/src/main/res/raw/: cert.crt  testserver.bks
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/downloadsharedlibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
